Added tests classes